# context7-to-markdown

./: .gitignore  README.md  pyproject.toml  requests.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
c2md/: __init__.py  __main__.py  file_organizer.py  index_generator.py  markdown_writer.py  parser.py  url_mapper.py
scripts/: release.py
src/: __main__.py  file_organizer.py  markdown_writer.py
tests/: __init__.py  test___main__.py  test_cli_output_directory.py  test_file_organizer.py  test_index_generator.py  test_markdown_writer.py  test_parser.py  test_url_mapper.py  test_url_support.py
